<?xml version="1.0"?>
<package>
  <name>turtlebot3_safety</name>
  <version>0.0.1</version>
  <description>  ROS packages for the Turtlebot3 Safety</description>
  <license>BSD</license>
  <author email="kurtsrobots@gmail.com">Kurt</author>
  <maintainer email="kurtsrobots@gmail.com">Kurt</maintainer>
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlebot3_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nodelet plugin="${prefix}/turtlebot3_safety.xml" />
  </export>
</package>
